# tree-sitter-rl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-rl.pc.in
bindings/c/tree_sitter/: tree-sitter-rl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRlTests/: TreeSitterRlTests.swift
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
