[package]
name = "tree-sitter-rl"
description = "Tree-sitter grammer for the RL programming language"
version = "0.1.0"
authors = ["Mohamed Gonem <nightangelyt01@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mohamedgonem/tree-sitter-rl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
